--- a/css/master.css
+++ b/css/master.css
@@ -9,11 +9,16 @@ div {
 }
 
 h1 {
+  font-size: 5em;
   color: #edffea;
   font-family: 'Gloria Hallelujah';
 }
 
+h2{
+  font-size: 2.3em;
+}
 h3 {
+  font-size: 1.4em;
   color: #dcedc1;
 }
 
@@ -22,7 +27,7 @@ hr {
   border-top-style: dotted;
   border-color: #F8B400;
   border-width: 5px;
-  width: 5%;
+  width: 20px;
 }
 
 .pro {
@@ -38,4 +43,16 @@ hr {
   display: block;
   position: relative;
   bottom: 20;
+}
+
+a{
+  color: #66bfbf
+}
+
+p{
+  font-size: 1.15em;
+}
+
+.footer-link{
+  font-size: 1.25em;
 }
