--- a/css/master.css
+++ b/css/master.css
@@ -2,7 +2,7 @@ body {
   background-color: #a1e6e3;
   margin: 0;
   text-align: center;
-  font-family: 'Indie Flower';
+  font-family: 'kavivanar';
 }
 div {
   background-color: #216353;
@@ -55,4 +55,23 @@ p{
 
 .footer-link{
   font-size: 1.25em;
+}
+
+.skill-row {
+  width: 75%;
+  margin: 100px auto 100px auto;
+  text-align: center;
+  line-height: 2
+}
+
+.button {
+  border: none;
+  background-color: #204051;
+  padding: 20px;
+  text-align: center;
+  text-decoration: overline;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 12px;
 }
