--- a/css/master.css
+++ b/css/master.css
@@ -75,3 +75,47 @@ p{
   margin: 4px 2px;
   border-radius: 12px;
 }
+
+.mailbutton {
+	-moz-box-shadow:inset 0px -1px 2px 0px #dcecfb;
+	-webkit-box-shadow:inset 0px -1px 2px 0px #dcecfb;
+	box-shadow:inset 0px -1px 2px 0px #dcecfb;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #bddbfa), color-stop(1, #80b5ea) );
+	background:-moz-linear-gradient( center top, #bddbfa 5%, #80b5ea 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bddbfa', endColorstr='#80b5ea');
+	background-color:#bddbfa;
+	-webkit-border-top-left-radius:7px;
+	-moz-border-radius-topleft:7px;
+	border-top-left-radius:7px;
+	-webkit-border-top-right-radius:7px;
+	-moz-border-radius-topright:7px;
+	border-top-right-radius:7px;
+	-webkit-border-bottom-right-radius:7px;
+	-moz-border-radius-bottomright:7px;
+	border-bottom-right-radius:7px;
+	-webkit-border-bottom-left-radius:7px;
+	-moz-border-radius-bottomleft:7px;
+	border-bottom-left-radius:7px;
+text-indent:0;
+	border:2px solid #84bbf3;
+	display:inline-block;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	font-style:normal;
+height:33px;
+	line-height:33px;
+width:153px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:2px 1px 2px #528ecc;
+}.mailbutton:hover {
+	background:-webkit-gradient(tions linear, left top, left bottom, color-stop(0.05, #80b5ea), color-stop(1, #bddbfa) );
+	background:-moz-linear-gradient( center top, #80b5ea 5%, #bddbfa 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#80b5ea', endColorstr='#bddbfa');
+	background-color:#80b5ea;
+}.mailbutton:active {
+	position:relative;
+	top:1px;
+}
